# OrchidImgEditer

./: .gitignore  CMakeLists.txt  README.md  build.ps1  run.ps1  task.md
docs/: DEVELOPMENT.md
resources/: resources.qrc
scripts/: build.bat  build.ps1  run.bat  run.ps1  setup_tesseract.bat  setup_tesseract.ps1
src/: ImageCanvas.cpp  ImageCanvas.h  MainWindow.cpp  MainWindow.h  OcrService.cpp  OcrService.h  Tools.h  main.cpp
tools/: gen_app_icon.py
